<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.EditProfile">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/edit_profile"
        app:titleTextColor="@color/white"
        android:background="@color/colorPrimary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/business_details"
                android:textSize="18sp"
                android:layout_margin="8dp"/>

            <EditText
                android:id="@+id/business_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/person_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/name"
                android:inputType="text"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:text="@string/set_your_prices"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6_kg_price"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/six_kg_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/_6_kg_price"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6_kg_with_cylinder"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/complete_six_kg_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/_6_kg_with_cylinder"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_13_kg_price"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/thirteen_kg_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/_13_kg_price"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_13_kg_with_cylinder"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/complete_thirteen_kg_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/_13_kg_with_cylinder"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_change_address"
                android:textSize="14sp"
                android:layout_marginBottom="2dp"
                android:gravity="center_horizontal"/>

            <Button
                android:id="@+id/fetch_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/get_business_location"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"/>

            <Button
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/update"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>