<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:src="@drawable/igaslogo"
        android:scaleType="centerCrop"/>

    <EditText
        android:id="@+id/log_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:textSize="18sp"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/log_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:textSize="18sp"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-smallcaps"
        android:background="@color/white"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"/>

    <ProgressBar
        android:id="@+id/load_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


</LinearLayout>